--- a/about/index.html
+++ b/about/index.html
@@ -45,14 +45,14 @@
                 <br>
                 <p class="white fs-big"> Sowa Engine is an open source 2d game engine that is currently being developed and maintained by <a href="https://github.com/Lexographics" target="_blank" rel="noopener noreferrer">Lexographics</a> </p>
             </div>
-            <img class="only-desktop shadow-2" draggable="false" width="50%" height="50%" style="margin: 3rem; padding: 1rem; border-radius: 6rem;" src="/static/bg-poster.png" alt="">
+            <img alt="sowa engine screenshot" class="only-desktop shadow-2" draggable="false" width="50%" height="50%" style="margin: 3rem; padding: 1rem; border-radius: 6rem;" src="/static/bg-poster.png" alt="">
         </div>
     </div>
 
     <div class="page download-page-panel">
         <div class="column flex-fixed">
             <div class="row flex-fixed">
-                <img class="only-desktop shadow-2" draggable="false" width="50%" height="50%" style="margin: 3rem; padding: 1rem; border-radius: 6rem;" src="/static/bg-poster.png" alt="">
+                <img alt="sowa engine screenshot" class="only-desktop shadow-2" draggable="false" width="50%" height="50%" style="margin: 3rem; padding: 1rem; border-radius: 6rem;" src="/static/bg-poster.png" alt="">
                 <div class="column no-padding-on-mobile" style="padding: 4rem;">
                     <h2 class="text-left white fs-big">Frequently askable questions</h2>
                     <br>
@@ -75,7 +75,7 @@
                     <p class="text-left white fs-big question"> Where can i ask my other questions? </p>
                     <p class="text-left white fs-big answer"> If you have any questions, feel free to ask at <a href="https://discord.gg/HP7SDFU2Ep" target="_blank" rel="noopener noreferrer">sowa engine discord server</a> </p>
                 </div>
-                <img class="only-desktop shadow-2" draggable="false" width="50%" height="50%" style="margin: 3rem; padding: 1rem; border-radius: 6rem;" src="/static/bg-poster.png" alt="">
+                <img alt="sowa engine screenshot" class="only-desktop shadow-2" draggable="false" width="50%" height="50%" style="margin: 3rem; padding: 1rem; border-radius: 6rem;" src="/static/bg-poster.png" alt="">
             </div>
         </div>
     </div>
