--- a/community/index.html
+++ b/community/index.html
@@ -43,8 +43,8 @@
         <div class="column cross-center">
             <br>
             <a href="https://discord.gg/HP7SDFU2Ep" target="_blank" rel="noopener noreferrer" class="no-deco gallery-card">
-                <img draggable="false" src="/static/bg-poster.png" alt="">
-                <img draggable="false" src="https://dcbadge.vercel.app/api/server/HP7SDFU2Ep" alt="">
+                <img alt="sowa engine screenshot" draggable="false" src="/static/bg-poster.png" alt="">
+                <img alt="sowa engine discord server preview"  draggable="false" src="https://dcbadge.vercel.app/api/server/HP7SDFU2Ep" alt="">
                 <h3 class="text-center"> Discord </h3>
                 <p class="text-center text-wrap"> You can join sowa engine discord server to ask,learn or have fun </p>
             </a>
