--- a/download/index.html
+++ b/download/index.html
@@ -39,7 +39,7 @@
     <h2 style="margin: 4rem; margin-top: 7rem;" class="text-center fs-sobig white"> Download Sowa Engine </h2>
     <div class="page download-page-panel">
         <div class="row flex-fixed">
-            <img class="only-desktop shadow-2" draggable="false" width="50%" height="50%" style="margin: 3rem; padding: 1rem; border-radius: 6rem;" src="/static/bg-poster.png" alt="">
+            <img alt="sowa engine version 0.1.1 pre release"  class="only-desktop shadow-2" draggable="false" width="50%" height="50%" style="margin: 3rem; padding: 1rem; border-radius: 6rem;" src="/static/bg-poster.png" alt="">
             <div style="padding: 4rem;">
                 <h2 class="white fs-big" style="color: rgb(164, 209, 205);"> Sowa Engine v0.1.1 pre release </h2>
                 <hr>
