--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             
             <div style="width: 40%; height: 100%;" class="column center cross-center only-desktop">
-                <img draggable="false" style="mix-blend-mode: multiply;" width="40%" src="/static/icon.png" alt="">
+                <img alt="sowa engine icon" draggable="false" style="mix-blend-mode: multiply;" width="40%" src="/static/icon.png" alt="">
                 <h3 class="white">Sowa Engine</h3>
             </div>
         </div>
@@ -63,27 +63,27 @@
             
             <div class="row wrap">
                 <a href="#game1" class="no-deco gallery-card">
-                    <img draggable="false" src="/static/bg-poster.png" alt="">
+                    <img alt="preview of game1" draggable="false" src="/static/bg-poster.png" alt="">
                     <h3 class="text-center"> Game1 </h3>
                     <p class="text-center text-wrap"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </a>
                 <a href="#game2" class="no-deco gallery-card">
-                    <img draggable="false" src="/static/bg-poster.png" alt="">
+                    <img alt="preview of game2" draggable="false" src="/static/bg-poster.png" alt="">
                     <h3 class="text-center"> Game2 </h3>
                     <p class="text-center text-wrap"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </a>
                 <a href="#game3" class="no-deco gallery-card">
-                    <img draggable="false" src="/static/bg-poster.png" alt="">
+                    <img alt="preview of game3" draggable="false" src="/static/bg-poster.png" alt="">
                     <h3 class="text-center"> Game3 </h3>
                     <p class="text-center text-wrap"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </a>
                 <a href="#longgame" class="no-deco gallery-card">
-                    <img draggable="false" src="/static/bg-poster.png" alt="">
+                    <img alt="preview of long game" draggable="false" src="/static/bg-poster.png" alt="">
                     <h3 class="text-center"> Long game name </h3>
                     <p class="text-center text-wrap"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </a>
                 <a href="#longlonggame" class="no-deco gallery-card">
-                    <img draggable="false" src="/static/bg-poster.png" alt="">
+                    <img alt="preview of long long game" draggable="false" src="/static/bg-poster.png" alt="">
                     <h3 class="text-center"> Long long game name long long </h3>
                     <p class="text-center text-wrap"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </a>
