--- a/about/index.html
+++ b/about/index.html
@@ -17,6 +17,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 
+    <meta property="og:title" content="Sowa Engine">
+    <meta property="og:site_name" content="Sowa Engine">
+    <meta property="og:url" content="sowaengine.com">
+    <meta property="og:description" content="Sowa engine - Free and open source, MIT Licensed 2D game engine">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://sowaengine.com/static/banner.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="sowaengine.com">
+    <meta property="twitter:url" content="https://sowaengine.com">
+    <meta name="twitter:title" content="Sowa Engine">
+    <meta name="twitter:description" content="Sowa Engine - Free and open source, MIT Licensed 2D game engine">
+    <meta name="twitter:image" content="https://sowaengine.com/static/banner.png">
+
+    <link rel="canonical" href="https://sowaengine.com/about"/>
+    <meta name="description" content="Additional information about sowa engine, an open source 2d game engine">
+
     <link rel="icon" type="image/png" href="/static/icon.png">
     <title>Sowa Engine | About</title>
 </head>
