--- a/community/index.html
+++ b/community/index.html
@@ -31,12 +31,22 @@
     <meta name="twitter:title" content="Sowa Engine">
     <meta name="twitter:description" content="Sowa Engine - Free and open source, MIT Licensed 2D game engine">
     <meta name="twitter:image" content="https://sowaengine.com/static/banner.png">
-    
+
     <link rel="canonical" href="https://sowaengine.com/community"/>
     <meta name="description" content="Links to community pages of sowa game engine, such as sowa engine discord server">
 
     <link rel="icon" type="image/png" href="/static/icon.png">
     <title>Sowa Engine | Community</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FMDK1CPCN"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3FMDK1CPCN');
+    </script>
 </head>
 <body>
     <!-- NAV START -->
