--- a/download/index.html
+++ b/download/index.html
@@ -32,9 +32,19 @@
 
     <link rel="canonical" href="https://sowaengine.com/download"/>
     <meta name="description" content="Sowa engine downloads page, version 0.2 will be released soon">
-    
+
     <link rel="icon" type="image/png" href="/static/icon.png">
     <title>Sowa Engine | Download</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FMDK1CPCN"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3FMDK1CPCN');
+    </script>
 </head>
 <body>
     <!-- NAV START -->
