--- a/about/index.html
+++ b/about/index.html
@@ -36,6 +36,16 @@
 
     <link rel="icon" type="image/png" href="/static/icon.png">
     <title>Sowa Engine | About</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FMDK1CPCN"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3FMDK1CPCN');
+    </script>
 </head>
 <body>
     <!-- NAV START -->
