--- a/download.html
+++ b/download.html
@@ -6,18 +6,18 @@
 	<link rel="icon" href="./favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.852fe616.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.786fb873.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/Button.3dce505a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.742cb7c7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.adc5b47a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.aab362a5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.682f17b7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.e4c0b51f.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.634a9079.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.15ae1b88.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.721ffe9a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Button.a28d5aea.js"><title>Sowa Engine | Download</title><!-- HEAD_svelte-1voqm7p_START --><!-- HEAD_svelte-1voqm7p_END -->
+		<link href="./app/immutable/assets/0.852fe616.css" rel="stylesheet">
+		<link href="./app/immutable/assets/3.786fb873.css" rel="stylesheet">
+		<link href="./app/immutable/assets/Button.3dce505a.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.0dab308f.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.adc5b47a.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/singletons.070a3285.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.e02e90d4.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/index.e4c0b51f.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.27f9e753.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.2fc0c023.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/3.e90c5e2d.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/Button.57e7f232.js"><title>Sowa Engine | Download</title><!-- HEAD_svelte-1voqm7p_START --><!-- HEAD_svelte-1voqm7p_END -->
 
 	<meta property="og:title" content="Sowa Engine">
 	<meta property="og:site_name" content="Sowa Engine">
@@ -55,7 +55,7 @@
 			
 			<script>
 				{
-					__sveltekit_mkh3i2 = {
+					__sveltekit_l1zsxf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -65,8 +65,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.742cb7c7.js"),
-						import("./_app/immutable/entry/app.682f17b7.js")
+						import("./app/immutable/entry/start.0dab308f.js"),
+						import("./app/immutable/entry/app.e02e90d4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
