--- a/download.html
+++ b/download.html
@@ -6,16 +6,16 @@
 	<link rel="icon" href="./favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./app/immutable/assets/0.852fe616.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.7f360cf7.css" rel="stylesheet">
 		<link href="./app/immutable/assets/3.786fb873.css" rel="stylesheet">
 		<link href="./app/immutable/assets/Button.3dce505a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.0dab308f.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.55a0dbff.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.adc5b47a.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/singletons.070a3285.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.e02e90d4.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/singletons.eea0a176.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.89a6f4e8.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.e4c0b51f.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.27f9e753.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.2fc0c023.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.54784926.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.1cd5538e.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/3.e90c5e2d.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/Button.57e7f232.js"><title>Sowa Engine | Download</title><!-- HEAD_svelte-1voqm7p_START --><!-- HEAD_svelte-1voqm7p_END -->
 
@@ -55,7 +55,7 @@
 			
 			<script>
 				{
-					__sveltekit_l1zsxf = {
+					__sveltekit_1gf7t2w = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -65,8 +65,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.0dab308f.js"),
-						import("./app/immutable/entry/app.e02e90d4.js")
+						import("./app/immutable/entry/start.55a0dbff.js"),
+						import("./app/immutable/entry/app.89a6f4e8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
