--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<link rel="icon" href="./favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./app/immutable/assets/0.852fe616.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.7f360cf7.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.541ba0f8.css" rel="stylesheet">
 		<link href="./app/immutable/assets/Button.3dce505a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.0dab308f.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.55a0dbff.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.adc5b47a.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/singletons.070a3285.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.e02e90d4.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/singletons.eea0a176.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.89a6f4e8.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.e4c0b51f.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.27f9e753.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.2fc0c023.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.71d90b1e.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.54784926.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.1cd5538e.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.621bb32d.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/Button.57e7f232.js"><title>Sowa Engine | Free and open source 2d game engine</title><!-- HEAD_svelte-1aypsg9_START --><!-- HEAD_svelte-1aypsg9_END -->
 
 	<meta property="og:title" content="Sowa Engine">
@@ -51,14 +51,14 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">   <div class="progress-container svelte-1c8m2ya" style="--scroll-progress: 0%;"><div class="progress-bar" id="myBar"></div></div> <nav class="nav svelte-1c8m2ya"><div class="left svelte-1c8m2ya"> <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"> <img src="/icon.png" class="img svelte-1c8m2ya" alt=""> Sowa Engine</div> </a>  <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-regular fa-circle-question svelte-hxwli"></i> About</div> </a></div> <div class="right svelte-1c8m2ya"> <a target="_blank" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-solid fa-book svelte-hxwli"></i> Docs</div> </a>  <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-solid fa-download svelte-hxwli"></i> Download</div> </a>  <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-solid fa-pencil svelte-hxwli"></i> Editor</div> </a>  <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-solid fa-right-to-bracket svelte-hxwli"></i> Login</div> </a></div> </nav> <div style="min-height: 4rem;"></div> <div style="overflow: hidden;"><div>  <div id="landing" class="svelte-1h3ynjn"><div style="display: flex; width: calc(80% - 4rem); height: 100%; align-items: center; flex-wrap: wrap; padding: 0 2rem; justify-content: center;" class="svelte-1h3ynjn"><div style="display: flex; justify-content: center;"><div><h1 style="font-size: 4rem; line-height: 1.2;" data-svelte-h="svelte-1m77cfk">Sowa Engine</h1> <h2 style="font-size: 2rem; line-height: 1.2;" data-svelte-h="svelte-9f8bff">A free and open source game engine</h2> <br> <a class="btn svelte-1u030mc" href="/download"><span class="btn-left svelte-1u030mc"><i class="fa-solid fa-download"></i> Download</span> <span class="btn-right svelte-1u030mc">0.1.1</span> </a></div></div> </div> <div id="landing-img" style="--scroll: 0px;" class="svelte-1h3ynjn"></div></div> <div style="padding: 4rem; background-color: var(--bg-color);" id="about" data-svelte-h="svelte-11ik70e"><br> <div style="display: flex; gap: 2rem; align-items: center;"><img class="img-shadow svelte-1h3ynjn" src="/bg.png" alt="" style="width: 50%;"> <div><h2 style="font-size: 2rem;">About Sowa Engine</h2> <br> <p style="font-size: 1.2rem; font-weight: 500; color: #cdcdcd; width: 80%;">Sowa Engine is an open source 2d game engine. It&#39;s currently in active
+	<div style="display: contents">   <div class="progress-container svelte-1c8m2ya" style="--scroll-progress: 0%;"><div class="progress-bar" id="myBar"></div></div> <nav class="nav svelte-1c8m2ya"><div class="left svelte-1c8m2ya"> <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"> <img src="/icon.png" class="img svelte-1c8m2ya" alt=""> Sowa Engine</div> </a>  <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-regular fa-circle-question svelte-hxwli"></i> About</div> </a></div> <div class="right svelte-1c8m2ya"> <a target="_blank" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-solid fa-book svelte-hxwli"></i> Docs</div> </a>  <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-solid fa-download svelte-hxwli"></i> Download</div> </a>  <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-solid fa-pencil svelte-hxwli"></i> Editor</div> </a>  <a target="_self" class="item svelte-hxwli" href="javascript:;"><div class="btn svelte-hxwli"><i class="icon fa-solid fa-right-to-bracket svelte-hxwli"></i> Login</div> </a></div> </nav> <div style="min-height: 4rem;"></div> <div style="overflow: hidden;"><div>  <div id="landing" class="svelte-1h3ynjn"><div style="display: flex; width: calc(80% - 4rem); height: 100%; align-items: center; flex-wrap: wrap; padding: 0 2rem; justify-content: center;" class="svelte-1h3ynjn"><div style="display: flex; justify-content: center;"><div><h1 style="font-size: 3rem; line-height: 1.2;" data-svelte-h="svelte-ruiq33">Sowa Engine</h1> <h2 style="font-size: 2rem; line-height: 1.2; font-weight: 500;" data-svelte-h="svelte-1rjfgdx">A free and open source game engine</h2> <br><br> <a class="btn svelte-1u030mc" href="/download"><span class="btn-left svelte-1u030mc"><i class="fa-solid fa-download"></i> Download</span> <span class="btn-right svelte-1u030mc">0.1.1</span> </a></div></div> </div> <div id="landing-img" style="--scroll: 0px;" class="svelte-1h3ynjn"></div></div> <div style="padding: 4rem; background-color: var(--bg-color);" id="about" data-svelte-h="svelte-11ik70e"><br> <div style="display: flex; gap: 2rem; align-items: center;"><img class="img-shadow svelte-1h3ynjn" src="/bg.png" alt="" style="width: 50%;"> <div><h2 style="font-size: 2rem;">About Sowa Engine</h2> <br> <p style="font-size: 1.2rem; font-weight: 500; color: #cdcdcd; width: 80%;">Sowa Engine is an open source 2d game engine. It&#39;s currently in active
         development. You can check out development progress of it in our
-        <a target="_blank" href="https://discord.gg/HP7SDFU2Ep">Discord server</a></p></div></div></div> <div style="padding: 4rem; background-color: var(--bg-color);" data-svelte-h="svelte-1s69dgt"><div style="display: flex; gap: 2rem; align-items: center;"><div><h2 style="font-size: 2rem;">Easy to use</h2> <br> <p style="font-size: 1.2rem; font-weight: 500; color: #cdcdcd; width: 80%;">Sowa Engine is designed to be simple to use and understand. It takes
+        <a target="_blank" href="https://discord.gg/HP7SDFU2Ep">Discord server</a></p></div></div></div> <div style="padding: 4rem; background-color: var(--bg-color);" data-svelte-h="svelte-cpebj1"><div style="display: flex; gap: 2rem; align-items: center;"><div><h2 style="font-size: 2rem;">Easy to use</h2> <br> <p style="font-size: 1.2rem; font-weight: 500; color: #cdcdcd; width: 80%;">Sowa Engine is designed to be simple to use and understand. It takes
         inspiration from <a target="_blank" href="https://godotengine.org">Godot Engine</a></p></div> <img class="img-shadow svelte-1h3ynjn" src="/ss1.png" alt="" style="width: 50%;"></div> </div></div></div> <div style="margin-top: 2rem; min-height: 200px; background-color: var(--footer-color); display: flex; justify-content: space-evenly; align-items: start; padding: 2rem max(1vw, 2rem); flex-wrap: wrap; gap: 2rem;" data-svelte-h="svelte-1nqrfp7"><div style="display: flex; align-items: center; gap: 1rem;"><img src="/icon.png" alt="" style="height: 4rem;"> <p class="brand svelte-1mabfhd">Sowa Engine</p></div> <div style="text-align: center; line-height: 1.5;"><h2 class="header svelte-1mabfhd">Navigation</h2> <a class="link svelte-1mabfhd" href="/#about">About</a> <br> <a class="link svelte-1mabfhd" target="_blank" href="https://docs.sowaengine.com">Docs</a> <br> <a class="link svelte-1mabfhd" href="/download">Download</a></div> <div style="text-align: center; line-height: 1.5;"><h2 class="header svelte-1mabfhd">Contact</h2> <div style="display: flex; gap: 1rem;"><a class="link svelte-1mabfhd" target="_blank" href="https://discord.gg/HP7SDFU2Ep"><i style="font-size: 2rem;" class="fa-brands fa-discord"></i></a> <a class="link svelte-1mabfhd" target="_blank" href="https://github.com/sowaengine/sowa"><i style="font-size: 2rem;" class="fa-brands fa-github"></i></a></div></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_l1zsxf = {
+					__sveltekit_1gf7t2w = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -68,8 +68,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.0dab308f.js"),
-						import("./app/immutable/entry/app.e02e90d4.js")
+						import("./app/immutable/entry/start.55a0dbff.js"),
+						import("./app/immutable/entry/app.89a6f4e8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
